[gd_scene load_steps=55 format=3 uid="uid://ch8jvaabtgfhk"]

[ext_resource type="Script" path="res://characters/warewolf/werewolf.gd" id="1_nnt3t"]
[ext_resource type="Texture2D" uid="uid://bbgvijhg61vv8" path="res://resources/characters/Werewolf/Werewolf with shadows/Werewolf-Attack01.png" id="2_xrenh"]
[ext_resource type="Texture2D" uid="uid://c3luuhvsxnhw3" path="res://resources/characters/Werewolf/Werewolf with shadows/Werewolf-Death.png" id="3_lbmni"]
[ext_resource type="Texture2D" uid="uid://bsu88nnrv4oqa" path="res://resources/characters/Werewolf/Werewolf with shadows/Werewolf-Hurt.png" id="4_m31k1"]
[ext_resource type="Texture2D" uid="uid://kuirrawgtbpg" path="res://resources/characters/Werewolf/Werewolf with shadows/Werewolf-Idle.png" id="5_v7p8t"]
[ext_resource type="Texture2D" uid="uid://bnm2taamyv5tr" path="res://resources/characters/Werewolf/Werewolf with shadows/Werewolf-Attack02.png" id="6_j8da3"]
[ext_resource type="Texture2D" uid="uid://bu3xab5dp7m6j" path="res://resources/characters/Werewolf/Werewolf with shadows/Werewolf-Walk.png" id="7_x3r1f"]

[sub_resource type="AtlasTexture" id="AtlasTexture_hsyty"]
atlas = ExtResource("2_xrenh")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_rabjf"]
atlas = ExtResource("2_xrenh")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_u03am"]
atlas = ExtResource("2_xrenh")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_qxprg"]
atlas = ExtResource("2_xrenh")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_4l6wt"]
atlas = ExtResource("2_xrenh")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_p5yhi"]
atlas = ExtResource("2_xrenh")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_7qjpe"]
atlas = ExtResource("2_xrenh")
region = Rect2(600, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_c8nsc"]
atlas = ExtResource("2_xrenh")
region = Rect2(700, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_gm4gs"]
atlas = ExtResource("2_xrenh")
region = Rect2(800, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_5dtdx"]
atlas = ExtResource("3_lbmni")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ow84m"]
atlas = ExtResource("3_lbmni")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_dbp62"]
atlas = ExtResource("3_lbmni")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_luwej"]
atlas = ExtResource("3_lbmni")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ioja3"]
atlas = ExtResource("4_m31k1")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_pxtj3"]
atlas = ExtResource("4_m31k1")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ar5qs"]
atlas = ExtResource("4_m31k1")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_lyyfs"]
atlas = ExtResource("4_m31k1")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_kvrsx"]
atlas = ExtResource("5_v7p8t")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_mujg4"]
atlas = ExtResource("5_v7p8t")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_1gd6d"]
atlas = ExtResource("5_v7p8t")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_4o2ci"]
atlas = ExtResource("5_v7p8t")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_12wxe"]
atlas = ExtResource("5_v7p8t")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_2f30a"]
atlas = ExtResource("5_v7p8t")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_fmg4a"]
atlas = ExtResource("6_j8da3")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_s6sxm"]
atlas = ExtResource("6_j8da3")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_53suc"]
atlas = ExtResource("6_j8da3")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_nkikj"]
atlas = ExtResource("6_j8da3")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_u3dh3"]
atlas = ExtResource("6_j8da3")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_evjpy"]
atlas = ExtResource("6_j8da3")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ud687"]
atlas = ExtResource("6_j8da3")
region = Rect2(600, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ijjg0"]
atlas = ExtResource("6_j8da3")
region = Rect2(700, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_xw1gc"]
atlas = ExtResource("6_j8da3")
region = Rect2(800, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_daic7"]
atlas = ExtResource("6_j8da3")
region = Rect2(900, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_48at3"]
atlas = ExtResource("6_j8da3")
region = Rect2(1000, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_oj2dj"]
atlas = ExtResource("6_j8da3")
region = Rect2(1100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_nb7n2"]
atlas = ExtResource("6_j8da3")
region = Rect2(1200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_pjovs"]
atlas = ExtResource("7_x3r1f")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_08n8c"]
atlas = ExtResource("7_x3r1f")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_g38kb"]
atlas = ExtResource("7_x3r1f")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_efmqw"]
atlas = ExtResource("7_x3r1f")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_fwmts"]
atlas = ExtResource("7_x3r1f")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_2rxmi"]
atlas = ExtResource("7_x3r1f")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_wl11b"]
atlas = ExtResource("7_x3r1f")
region = Rect2(600, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_2rfej"]
atlas = ExtResource("7_x3r1f")
region = Rect2(700, 0, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_pl01k"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hsyty")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rabjf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u03am")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qxprg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4l6wt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p5yhi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7qjpe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c8nsc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gm4gs")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5dtdx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ow84m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dbp62")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_luwej")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ioja3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pxtj3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ar5qs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lyyfs")
}],
"loop": true,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kvrsx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mujg4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1gd6d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4o2ci")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_12wxe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2f30a")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fmg4a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s6sxm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_53suc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nkikj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u3dh3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_evjpy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ud687")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ijjg0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xw1gc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_daic7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_48at3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oj2dj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nb7n2")
}],
"loop": true,
"name": &"skill",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pjovs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_08n8c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g38kb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_efmqw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fwmts")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2rxmi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wl11b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2rfej")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_dflxr"]
radius = 69.1158

[sub_resource type="CircleShape2D" id="CircleShape2D_hye7p"]

[node name="werewolf" type="CharacterBody2D"]
light_mask = 2
visibility_layer = 2
script = ExtResource("1_nnt3t")

[node name="werewolf_animation" type="AnimatedSprite2D" parent="."]
position = Vector2(-1, 0)
sprite_frames = SubResource("SpriteFrames_pl01k")
animation = &"skill"

[node name="detection_area" type="Area2D" parent="werewolf_animation"]
position = Vector2(2, 1)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="werewolf_animation/detection_area"]
light_mask = 2
visibility_layer = 2
shape = SubResource("CircleShape2D_dflxr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_hye7p")

[connection signal="body_entered" from="werewolf_animation/detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="werewolf_animation/detection_area" to="." method="_on_detection_area_body_exited"]
[connection signal="body_shape_entered" from="werewolf_animation/detection_area" to="." method="_on_detection_area_body_shape_entered"]
